Added madel, events controller.

--- a/test/loadtest/load.ini
+++ b/test/loadtest/load.ini
@@ -6,6 +6,6 @@ plugin_overload=yandextank.plugins.Overload
 token_file=token.txt
 		
 [phantom]
-address = localhost:9000
-rps_schedule = line(1, 1500, 2m) const (1500,10m) 
-uris = /
+address = 207.154.192.51 
+rps_schedule = line(1, 200, 2m) const(200, 3m) 
+uris = /mag
