--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,7 +26,7 @@ akka {
     default-dispatcher {
       fork-join-executor {
         # Settings this to 1 instead of 3 seems to improve performance.
-        parallelism-factor = 1.0
+        parallelism-factor = 5 
 
         # @richdougherty: Not sure why this is set below the Akka
         # default.
@@ -36,7 +36,7 @@ akka {
         # to use a stack discipline for task scheduling. This usually
         # improves throughput at the cost of possibly increasing
         # latency and risking task starvation (which should be rare).
-        task-peeking-mode = FIFO
+        task-peeking-mode = LIFO
       }
     }
   }
@@ -161,7 +161,12 @@ play.http {
 play.server.netty {
   # Whether the Netty wire should be logged
   #log.wire = true
+  eventLoopThreads = 5
 
+  # Whether the Netty wire should be logged
+  #log.wire = true
+  transport = "native"
+  maxChunkSize = 81920
   # If you run Play on Linux, you can use Netty's native socket transport
   # for higher performance with less garbage.
   #transport = "native"
@@ -181,7 +186,7 @@ play.ws {
   #followRedirects = false
 
   # Sets the maximum number of open HTTP connections for the client.
-  #ahc.maxConnectionsTotal = 50
+  ahc.maxConnectionsTotal = 150
 
   ## WS SSL
   # https://www.playframework.com/documentation/latest/WsSSL
@@ -341,13 +346,13 @@ db {
   # By convention, the default datasource is named `default`
 
   # https://www.playframework.com/documentation/latest/Developing-with-the-H2-Database
-  default.driver = org.h2.Driver
-  default.url = "jdbc:h2:mem:play"
+  #default.driver = org.h2.Driver
+  #default.url = "jdbc:h2:mem:play"
   #default.username = sa
   #default.password = ""
 
   # You can expose this datasource via JNDI if needed (Useful for JPA)
-  default.jndiName=DefaultDS
+  #default.jndiName=DefaultDS
 
   # You can turn on SQL logging for any datasource
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
