Improved database connection.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,7 +26,7 @@ akka {
     default-dispatcher {
       fork-join-executor {
         # Settings this to 1 instead of 3 seems to improve performance.
-        parallelism-factor = 5 
+        parallelism-factor = 2 
 
         # @richdougherty: Not sure why this is set below the Akka
         # default.
@@ -36,7 +36,7 @@ akka {
         # to use a stack discipline for task scheduling. This usually
         # improves throughput at the cost of possibly increasing
         # latency and risking task starvation (which should be rare).
-        task-peeking-mode = LIFO
+        task-peeking-mode = FIFO
       }
     }
   }
@@ -161,7 +161,7 @@ play.http {
 play.server.netty {
   # Whether the Netty wire should be logged
   #log.wire = true
-  eventLoopThreads = 5
+  eventLoopThreads = 4
 
   # Whether the Netty wire should be logged
   #log.wire = true
